[Release 2.10.30-ex120] 提高代码健壮性和可读性